# asistenciacsv

./: .gitignore  Notas  date_time.py  entities.py  errors.py  file.csv  file_commas.csv  main.py  main_new.py  main_sin_click.py  output.csv  parsers.py  poetry.lock.old  pyproject.toml
fixtures/: 2021-02-23.csv  2021-02-24.csv  2021-02-25.csv
tests/: conftest.py  test_entities.py  test_parsers.py
